# Kernels

./: .gitignore  .gitmodules  BUILD_AND_BENCH.md  Makefile  OPERATOR_COVERAGE.md  README.md  SINGLE_BENCHMARK.md  bench_122B.md  bench_all.sh  bench_attention_inference.sh  compile.sh  export_binaries.sh  main.cu  qwen35_kernel_breakdown.csv
bench/: bench_k1.cu  bench_k2.cu  bench_k3.cu  bench_k4.cu  bench_k5.cu
flash_attn/: Makefile  README.md  bench_flash_attn.py  bench_flash_infer.py
general/: Makefile  README.md  bench_cublas_gemm.cu  bench_cuda_core_gemv.cu  bench_rmsnorm.cu
general/w4a16_gemm/: README.md
helpers/: model_latency_summary.py  plot_122b_comparison.py  summarize_ncu_cycles.py  summarize_nsys_traces.py  summarize_perfstatistics.py
include/: bench_timer.h  bench_utils.h  deltanet.h  ggml_compat.h  naive_reference.h
linear_attention/: Makefile  README.md  bench_fused_rms_norm_gate
linear_attention/src/: bench_conv1d_fwd.cu  bench_conv1d_update.cu  bench_flash_attn.py  bench_flashinfer_gdn_prefill.py  bench_gdn_decode.py  bench_kda_prefill.cu  bench_layernorm.cu  bench_marlin_gemv.py  bench_vllm_triton_gdn_decode.py  bench_vllm_triton_gdn_prefill.py  causal_conv1d_update.cu  fused_rms_norm_gate.cu  gated_delta_net.cu  oneflow_layernorm.cuh
linear_attn/: Makefile  README.md
linear_attn/src/: bench_flashinfer_gdn_prefill.py  bench_gdn_decode.py  bench_gdn_gate_prep.py  bench_linear_ops.cu  bench_vllm_triton_gdn_decode.py  bench_vllm_triton_gdn_prefill.py
marlin_moe/: Makefile  README.md
marlin_moe/include/: compat.h  kernel_selector.h  marlin.cuh  scalar_type.hpp
marlin_moe/src/: moe_sum.cu  silu_and_mul.cu  topk_gating.cu
moe_ffn/: Makefile  README.md  bench_shared_expert.cu
moe_ffn/w4a16/: Makefile  README.md  TRTLLM_VS_VLLM_BREAKDOWN.md
moe_ffn/w4a16/machete/: CMakeLists.txt  README.md  bench_machete_moe.cu  machete_moe_tactics_h800.cache
moe_w4a16/: Makefile  README.md  TRTLLM_VS_VLLM_BREAKDOWN.md
moe_w4a16/auxiliary/: Makefile  README.md
moe_w4a16/marlin/: Makefile  bench_marlin_moe.cu
moe_w4a16_bench/: bench_moe_full.py
sampling/: Makefile  README.md  bench_sampling.cu
src/: causal_conv1d.h  causal_conv1d_common.h  causal_conv1d_fwd.cu  causal_conv1d_update.cu  chunk_gated_delta_rule.cu  fused_recurrent.cu  fused_rms_norm_gate.cu  gated_delta_net.cu  ssm_conv.cu
studies/linear_prefill_flashinfer_gdn/: .gitignore  FLASHQLA_UPSTREAM_BENCH.md  Makefile  PERFORMANCE_ANALYSIS.md  README.md  bench_flashqla_force_cp.py  bench_flashqla_upstream.py  sweep_flashinfer_cp_proxy.sh
studies/linear_residual_add_bw/: .gitignore  Makefile  README.md
studies/lm_head_gemv_bw/: .gitignore  Makefile  README.md  TECH_REPORT.md
studies/ppu_finalize_moe_routing/: .gitignore  Makefile  README.md
w4a16_gemm/: .gitignore  README.md  cublas_bf16_bench  cublas_bf16_bench.cu  cutlass_w4a16_bench  index.html  marlin_standalone  marlin_standalone.cu
w4a16_gemm/cutlass55_standalone/: CMakeLists.txt  (+1 more)
w4a16_gemm_bench/: README.md  cublas_bf16_bench.cu
(+141 files in other folders)
